ingress/ingress.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: nginx-ingress 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec: 
  ingressClassName: nginx 
  rules: 
  - host: adf4f0b45ea5c4bb091d74e11360b97a-e369e47cf1303389.elb.ap-south-1.amazonaws.com
    http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: home-svc
            port: 
              number: 80 
      - path: /mobile 
        pathType: Prefix 
        backend: 
          service: 
            name: mobile-svc 
            port: 
              number: 80 
      - path: /laptop 
        pathType: Prefix 
        backend:  
          service:  
            name: laptop-svc
            port:  
              number: 8080
